# Recommendation_engine_Fast_API

./: .dockerignore  .gitignore  API_README.md  Dockerfile  PHASE3_LATENCY_ANALYSIS.md  README.md  combined_data.json  create_vector_db.py  crew_output.json  discovered_ingredients_web.json  flagged_biomarkers.md  ingredients.md  install_rag_dependencies.py  install_rag_uv.sh  onedrive_setup_guide.md  push_to_repo.sh  pyproject.toml  quick_install_rag.md  ranked_ingredients.json  ranked_ingredients_baseline.json  ranked_ingredients_crewai_rag.json  required_packages.txt  requirements-api.txt  run_api.sh  sample_input_creator.py  test_air_filter.py  test_api.py  test_consistent_wake_time.py  test_focus_areas.py  test_gcs_helper.py  test_gcs_upload.py  test_gcs_upload_local.py  test_health_goals_matching.py  test_last_felt_well_matching.py  test_patient_reasoning_matching.py  test_sunlight_exposure.py  test_symptom_aggravators_matching.py  test_trigger_event_matching.py  user_profile.json  validated_ingredients_google.json  (+1 more)
db/: chroma.sqlite3
ingredients_vector_db/: chroma.sqlite3
inputs/: blood_report.json  combined_data copy.json  combined_data.json  patient_details.json  transformed_ingredients.json
output/: report.md
outputs/: final_supplement_recommendations_Satya.json  final_supplement_recommendations_maggie.json
outputs/patient_1/: .~unknown_user.xlsx  biomarker_status.md  crew_final.json  discovered_ingredients_web.json  final_supplement_recommendations.json  focus_areas.md  rag_ingredient_recommendations.json  ranked_ingredients.json  test-user-id.xlsx  (+3 more)
(+107 files in other folders)
