[project]
name = "aether_2"
version = "0.1.0"
description = "aether-2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "openai>=1.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "sentence-transformers>=2.2.0",
    "torch>=1.9.0",
    "requests>=2.25.0",
    "google-cloud-secret-manager>=2.16.0",
]

[project.scripts]
aether_2 = "aether_2.main:run"
run_crew = "aether_2.main:run"
train = "aether_2.main:train"
replay = "aether_2.main:replay"
test = "aether_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
